--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Fri Jul 12 2024 05:20:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jul 15 2024 06:38:12 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6673c7904698b027cc92c9a1" data-wf-site="6673c7904698b027cc92c99a">
 <head>
   <meta charset="utf-8">
@@ -71,13 +71,13 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
     <div class="banner-images-splide splide">
       <div class="splide__track">
         <ul role="list" class="splide__list">
-          <li class="splide__slide full"><img src="images/_MG_4237.jpg" loading="lazy" width="823" height="711" alt="" srcset="images/_MG_4237.jpg 500w, images/_MG_4237.jpg 800w, images/_MG_4237.jpg 1080w, images/_MG_4237.jpg 1440w" sizes="100vw" class="banner-slider-image full"></li>
-          <li class="splide__slide"><img src="images/DURJOY--TKM.jpg" loading="lazy" width="592" height="711" alt="" srcset="images/DURJOY--TKM.jpg 500w, images/DURJOY--TKM.jpg 800w, images/DURJOY--TKM.jpg 1080w, images/DURJOY--TKM.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
-          <li class="splide__slide"><img src="images/ABC-2.jpg" loading="lazy" width="595" height="711" alt="" srcset="images/ABC-2.jpg 500w, images/ABC-2.jpg 800w, images/ABC-2.jpg 1080w, images/ABC-2.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
-          <li class="splide__slide"><img src="images/daar.jpg" loading="lazy" width="592" height="711" alt="" srcset="images/daar.jpg 500w, images/daar.jpg 800w, images/daar.jpg 1080w, images/daar.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
-          <li class="splide__slide"><img src="images/aspinwall3.jpg" loading="lazy" width="820" height="711" alt="" srcset="images/aspinwall3.jpg 500w, images/aspinwall3.jpg 800w, images/aspinwall3.jpg 1080w, images/aspinwall3.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
-          <li class="splide__slide"><img src="images/Livingstan--Sivagnanam1.jpg" loading="lazy" width="820" height="711" alt="" srcset="images/Livingstan--Sivagnanam1.jpg 500w, images/Livingstan--Sivagnanam1.jpg 800w, images/Livingstan--Sivagnanam1.jpg 1080w, images/Livingstan--Sivagnanam1.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
-          <li class="splide__slide"><img src="images/SEHER-2.jpg" loading="lazy" width="820" height="711" alt="" srcset="images/SEHER-2.jpg 500w, images/SEHER-2.jpg 800w, images/SEHER-2.jpg 1080w, images/SEHER-2.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
+          <li class="splide__slide full"><img src="images/_MG_4237.jpg" loading="lazy" width="823" height="711" alt="" srcset="images/_MG_4237-p-500.jpg 500w, images/_MG_4237-p-800.jpg 800w, images/_MG_4237-p-1080.jpg 1080w, images/_MG_4237.jpg 1440w" sizes="100vw" class="banner-slider-image full"></li>
+          <li class="splide__slide"><img src="images/DURJOY--TKM.jpg" loading="lazy" width="592" height="711" alt="" srcset="images/DURJOY--TKM-p-500.jpg 500w, images/DURJOY--TKM-p-800.jpg 800w, images/DURJOY--TKM-p-1080.jpg 1080w, images/DURJOY--TKM.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
+          <li class="splide__slide"><img src="images/ABC-2.jpg" loading="lazy" width="595" height="711" alt="" srcset="images/ABC-2-p-500.jpg 500w, images/ABC-2-p-800.jpg 800w, images/ABC-2-p-1080.jpg 1080w, images/ABC-2.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
+          <li class="splide__slide"><img src="images/daar.jpg" loading="lazy" width="592" height="711" alt="" srcset="images/daar-p-500.jpg 500w, images/daar-p-800.jpg 800w, images/daar-p-1080.jpg 1080w, images/daar.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
+          <li class="splide__slide"><img src="images/aspinwall3.jpg" loading="lazy" width="820" height="711" alt="" srcset="images/aspinwall3-p-500.jpg 500w, images/aspinwall3-p-800.jpg 800w, images/aspinwall3-p-1080.jpg 1080w, images/aspinwall3.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
+          <li class="splide__slide"><img src="images/Livingstan--Sivagnanam1.jpg" loading="lazy" width="820" height="711" alt="" srcset="images/Livingstan--Sivagnanam1-p-500.jpg 500w, images/Livingstan--Sivagnanam1-p-800.jpg 800w, images/Livingstan--Sivagnanam1-p-1080.jpg 1080w, images/Livingstan--Sivagnanam1.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
+          <li class="splide__slide"><img src="images/SEHER-2.jpg" loading="lazy" width="820" height="711" alt="" srcset="images/SEHER-2-p-500.jpg 500w, images/SEHER-2-p-800.jpg 800w, images/SEHER-2-p-1080.jpg 1080w, images/SEHER-2.jpg 1440w" sizes="100vw" class="banner-slider-image"></li>
         </ul>
       </div>
     </div>
@@ -185,11 +185,11 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/j
       pauseOnHover:false,
       pauseOnFocus:false,
       autoScroll: {
-            speed: 0.2,
+            speed: 0.3,
       }, breakpoints: {
           768: {
              autoScroll: {
-                    speed: 0.4,
+                    speed: 0.2,
               },
           },
         }
