removed back to home button

--- a/404.html
+++ b/404.html
@@ -119,10 +119,10 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
   <body class="body">
     <div class="m-container">
       <div class="topheader" style="display: flex; justify-content: center">
-        <a href="#" class="brand w-nav-brand"
+        <a href="/index.html" class="brand w-nav-brand"
           ><img loading="lazy" src="images/KBF-Logo.svg" style="display: block" alt="KBF Logo" class="logo-desktop"
         /></a>
-        <a href="#" class="brand-2 w-nav-brand"
+        <a href="/index.html" class="brand-2 w-nav-brand"
           ><img
             width="Auto"
             height="80"
@@ -139,7 +139,9 @@ https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
         <div class="cd cd3"></div>
       </div>
       <div class="m-text">Page Not Found</div>
+      {#
       <a href="/index.html" style="margin-left: 0; margin-top: 72px" class="button ghost-button red ticketbutton w-button">Back to Home</a>
+      #}
     </div>
   </body>
 </html>
